# TinyOS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
arch/: CMakeLists.txt
arch/i386/: boot.S  gdt.c  gdt.h  idt.c  interrupt.S  interrupt.c
boot/: CMakeLists.txt
boot/include/boot/: gdt.h  idt.h  int_types.h  multiboot.h
boot/src/: boot.S  gdt.c  hhk.c  idt.c  interrupt.c  interrupt.s
cmake/: custom_command.cmake
hal/: CMakeLists.txt  text.c
include/TinyOS/arch/i386/: idt.h  interrupt.h
include/TinyOS/tty/: tty.h
kernel/: CMakeLists.txt  kernel.c
kernel/include/kernel/interrupt/: interrupt.h
kernel/src/: interrupt.c  kernel.c  tty.c
kernel/tty/: tty.c
scripts/: TinyOS-Debug.ld  grub.cfg
src/: main.c
